Minor-fix: Added z-index to navbar

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -7,4 +7,5 @@
 	justify-content: space-between;
 	position: sticky;
 	top: 0px;
+	z-index: 100;
 }
